컨트롤러의 경로 수정

--- a/www/src/index.html
+++ b/www/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>Title</title>
   <script src="./bower_components/angular/angular.min.js"></script>
-  <script src="js/main-ctrl.js"></script>
+  <script src="./js/main-ctrl.js"></script>
 </head>
 <body ng-controller="MainCtrl">
 <input type="text" ng-model="model" /><br />
