나름 완성본

--- a/www/src/index.html
+++ b/www/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
-<html lang="ko" ng-app="app">
+<html lang="ko">
 <head>
   <meta charset="utf-8" />
+  <!-- build:bundleCSS -->
+  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css" />
+  <!-- endbuild -->
+  <!-- build:appCSS -->
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/style2.css" />
+  <!-- endbuild -->
   <title>Title</title>
-  <script src="./bower_components/angular/angular.min.js"></script>
-  <script src="./js/main-ctrl.js"></script>
 </head>
-<body ng-controller="MainCtrl">
-<input type="text" ng-model="model" /><br />
-{{model}}
+<body ng-app="myModule" ng-controller="ChartCtrl">
+<canvas chart-bar chart-data="children.data" chart-labels="children.labels"
+        chart-series="children.series"></canvas>
+<!-- build:bundleJS -->
+<script src="./bower_components/angular/angular.min.js"></script>
+<script src="./bower_components/chart.js/dist/Chart.min.js"></script>
+<script src="./bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+<!-- endbuild -->
+<!-- build:appJS -->
+<script src="scripts/chart-ctrl.js"></script>
+<!-- endbuild -->
 </body>
 </html>
